[ style ] : fix wlogout alignment issue

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -58,7 +58,7 @@ window#waybar.hidden {
     padding-bottom: 0px;
     margin-top: 3px;
     margin-bottom: 3px;
-    border-radius: 6px;
+    border-radius: 4px;
 
     border-bottom-width: 2px;
     border-bottom-color: #0e0e0e;
@@ -78,7 +78,7 @@ window#waybar.hidden {
     margin-bottom: 3px;
     margin-left: 3px;
     margin-right: 3px;
-    border-radius: 6px;
+    border-radius: 4px;
     border-bottom-width: 2px;
     border-bottom-color: #0e0e0e;
     border-bottom-style: solid;
@@ -92,7 +92,7 @@ window#waybar.hidden {
 #workspaces button.focused {
     background-color: @accent;
     color: @bg0;
-    border-radius: 6px;
+    border-radius: 4px;
     margin-top: 3px;
     margin-bottom: 3px;
 
